Блок с меню на странице раздела Средняя школа

--- a/css/style.css
+++ b/css/style.css
@@ -9036,6 +9036,10 @@ text-align: center;
   background: #7BC4F9;
   border: 2px solid #7BC4F9;
 }
+.section-menu.srsk>li>a {
+  background: #FF8D44;
+  border: 2px solid #FF8D44;
+}
 .section-menu>li:first-child>a:hover {
   background: #20A0A0;
   border: 2px solid #20A0A0;
@@ -9059,14 +9063,32 @@ text-align: center;
   background: #325DE9;
   border: 2px solid #325DE9;
 }
-.section-menu.dosk>li:nth-child(2n+4)>a:hover {
-  background: #FF422C;
-  border: 2px solid #FF422C;
-}
+
 .section-menu.dosk>li:nth-child(2n+5)>a:hover {
   background: #9C16B9;
   border: 2px solid #9C16B9;
 }
+.section-menu.dosk>li:nth-child(2n+2)>a:hover {
+  background: #FF422C;
+  border: 2px solid #FF422C;
+}
+.section-menu.srsk>li:nth-child(2n+3)>a:hover {
+  background: #FAE480 !important;
+  border: 2px solid #FAE480 !important;
+}
+.section-menu.srsk>li:nth-child(2n+2)>a:hover {
+  background: #FF5642;
+  border: 2px solid #FF5642;
+}
+.section-menu.srsk>li:first-child>a:hover,
+.section-menu.srsk>li:nth-child(5)>a:hover,
+.section-menu.srsk>li:nth-child(7)>a:hover,
+.section-menu.srsk>li:nth-child(11)>a:hover,
+.section-menu.srsk>li:nth-child(13)>a:hover   {
+  background: #7ee5ff !important;
+  border: 2px solid #7ee5ff !important;
+}
+
 @media (max-width: 451px) {
   .section-menu>li>a {
     padding: 15px 15px;
