--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -4428,3 +4428,221 @@ ol.text-dogovora-items ol ol li::before {
 
 
 
+ 
+                /*--кебаб---*/
+                .card-lk_title-kebab {
+                    min-height: 80px !important;
+                }
+
+                .card-lk_title-kebab>.card-lk_title-pay>span {
+                    min-height: 40px;
+                }
+
+                .card-lk_title-data-kebab {
+                    display: flex;
+                    width: fit-content;
+                    gap: 10px;
+                }
+
+               
+                .kebab {
+                    cursor: pointer;
+                    position: relative;
+                    display: inline-block;
+                    box-sizing: border-box;
+
+                }
+
+                .nav-kebab {
+                    display: flex;
+                    position: absolute;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-content: flex-end;
+                    align-items: flex-end;
+                    height: 0px;
+                    top: 40px;
+                    right: 10px;
+                    z-index: 1000;
+                }
+
+                .kebab figure {
+                    width: 5px;
+                    min-width: 5px;
+                    height: 5px;
+                    min-height: 5px;
+                    border-radius: 50%;
+                    background: #fff;
+                    margin: 3px 0;
+                }
+
+                .middle {
+                    transition: all 0.25s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+                    transform: scale(1);
+                    position: relative;
+                    box-shadow: 0 0.1px 0.1px 0 rgba(0, 0, 0, 0.16), 0 0.1px 0.3px 0 rgba(0, 0, 0, 0.12);
+                    -webkit-filter: blur(0.1px);
+                    filter: blur(0.1px);
+                }
+
+                .middle.active {
+                    z-index: 1;
+                    top: -26px;
+                    left: 8px;
+                    width: 25px;
+                    min-width: 25px;
+                    height: 25px;
+                    min-height: 25px;
+                    background: #d41b19;
+                    /* transform: scale(4); */
+                    transition: all 0.5s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+                    border: 2px solid #d41b19;
+                }
+
+                .cross {
+                    position: absolute;
+                    top: -4px;
+                    left: 21px;
+                    transform: translate(-50%, -50%) scale(0);
+                    /* margin-top: -1px; */
+                    font-family: "Nunito-Bold";
+                    color: #fff;
+                    transition: all 0.2s cubic-bezier(0.72, 1.2, 0.71, 0.72);
+                    font-size: 18px;
+                    user-select: none;
+                }
+
+                .cross.active {
+                    z-index: 2;
+                    transform: translate(-50%, -50%) scale(1);
+                    transition: all 0.15s cubic-bezier(0.32, 2.04, 0.85, 0.54);
+                }
+
+
+
+
+
+
+                .nav>li {
+                    display: inline-block;
+                    padding: 1em 18px;
+                    cursor: pointer;
+                }
+
+                .nav>li:hover {
+                    background: #186f72;
+                }
+
+                .dropdown {
+                    display: flex;
+                    position: absolute;
+                    right: -5px;
+                    top: -10px;
+                    transition: all 0.25s ease-out;
+                    transform: scale(0);
+                    background: #fff;
+                    border-radius: 10px;
+                    border: 2px solid #d41b19;
+                    transform-origin: 100% 0;
+                    flex-direction: column;
+                    padding: 10px 5px;
+                }
+
+                .dropdown li {
+                    line-height: 14px !important;
+                    display: block;
+                    padding: 5px 10px;
+                    border-radius: 10px;
+                }
+
+
+                .dropdown li a {
+                    width: 100%;
+
+                    display: inline-block;
+                    white-space: pre;
+                    box-sizing: border-box;
+                    font-family: "Nunito";
+                    font-weight: 400;
+                    font-size: 14px;
+                    line-height: 14px !important;
+                    text-decoration: none;
+                    color: var(--colorDanger);
+                }
+
+                .dropdown li:hover {
+                    background: rgba(212, 27, 25, .1);
+                }
+
+                .dropdown:hover ul {
+                    transform: scale(1);
+                }
+
+                .dropdown.active {
+                    z-index: 0;
+                    transform: scale(1);
+                    transition: all 0.5s cubic-bezier(0.5, 1.8, 0.9, 0.8);
+                }
+
+                .follow {
+                    overflow: hidden;
+                    width: 42px;
+                    height: 42px;
+                    border-radius: 50px;
+                    background: #fff;
+                    display: block;
+                    margin: 300px auto 0;
+                    white-space: nowrap;
+                    padding: 13px;
+                    box-sizing: border-box;
+                    color: white;
+                    transition: all 0.2s ease;
+                    font-family: Roboto, sans-serif;
+                    text-decoration: none;
+                    box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.0);
+                }
+
+                .follow i {
+                    margin-right: 20px;
+                    transition: margin-right 0.2s ease;
+                }
+
+                .follow:hover {
+                    width: 134px;
+                }
+
+                .follow:hover i {
+                    margin-right: 10px;
+                }
+
+                @media screen and (max-width: 800px) {
+                    .follow {
+                        margin: 400px auto 0;
+                    }
+                }
+
+
+
+                @container next-class-card-educator (max-width: 560px) {
+                    .color-next-class-card.educator>.card-lk_title.card-lk_title-kebab {
+                        flex-direction: row;
+                        justify-content: space-between;
+                        align-items: center;
+                        gap: 15px;
+                        flex-wrap: wrap;
+                    }
+                }
+
+                @container next-class-card-educator (max-width: 440px) {
+                    .color-next-class-card.educator>.card-lk_title.card-lk_title-kebab {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: space-between;
+                        align-items: flex-start;
+                        gap: 15px;
+                        flex-wrap: wrap;
+                        align-content: flex-start;
+                        padding: 25px;
+                    }
+                }
+            /*-----*/
